--- a/requirements.txt
+++ b/requirements.txt
@@ -52,4 +52,7 @@ gevent==25.5.1
 python-decouple>=3.8
 pytz==2024.2
 setuptools==80.9.0
+# Security: pin minimum versions to address known vulnerabilities
+urllib3~=2.6.3
+wheel~=0.46.1
 # git+https://github.com/dbca-wa/webtemplate2.git#egg=webtemplate_dbca
